--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -265,3 +265,7 @@
 [[constraint]]
   name = "github.com/mesos/mesos-go"
   version = "0.0.8"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/dcos/dcos-go"
